fixed animation disappearing on overflow

--- a/tempStyle.css
+++ b/tempStyle.css
@@ -386,7 +386,7 @@ a:hover {
   
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 600px;
   overflow: hidden;
   height: 4rem;
   background-color: rgba(#000, 0.9); 
@@ -428,6 +428,7 @@ a:hover {
 
 @media only screen and (min-width: 600px) {
     #ticker-wrap {
+        width: 100%;
         left: 0;
         -webkit-transform: rotate(90deg);
         -moz-transform: rotate(90deg);
